--- a/github/flux/busybox.yaml
+++ b/github/flux/busybox.yaml
@@ -1,24 +1,30 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: busybox
-  namespace: test
+  name: busybox-deployment
   labels:
     app: busybox
 spec:
-  containers:
-  - image: busybox
-    command:
-      - sleep
-      - "3600"
-    imagePullPolicy: IfNotPresent
-    name: busybox
-    resources:
-      requests:
-        memory: "10Mi"
-        cpu: "10m"
-      limits:
-        memory: "20Mi"
-        cpu: "20m"
-
-  restartPolicy: Always
+  replicas: 1
+  strategy: 
+    type: RollingUpdate
+  selector:
+    matchLabels:
+      app: busybox
+  template:
+    metadata:
+      labels:
+        app: busybox
+    spec:
+      containers:
+      - name: busybox
+        image: busybox
+        imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            memory: "10Mi"
+            cpu: "10m"
+          limits:
+            memory: "20Mi"
+            cpu: "20m
+        command: ['sh', '-c', 'echo Container 1 is Running ; sleep 3600']
